--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 android {
-    buildToolsVersion "25.0.2"
-    compileSdkVersion 24
+    buildToolsVersion "27.0.3"
+    compileSdkVersion 27
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -12,17 +12,22 @@ android {
             jniLibs.srcDirs = ['libs']
         }
 
-        instrumentTest.setRoot('tests')
+        androidTest.setRoot('tests')
+    }
+    bundle {
+        language {
+            enableSplit = false
+        }
     }
     packagingOptions {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
         applicationId "ferjogames.coralsystemdeck"
-        minSdkVersion 9
-        targetSdkVersion 24
-        versionCode 23
-        versionName "1.2"
+        minSdkVersion 14
+        targetSdkVersion 27
+        versionCode 26
+        versionName "1.2.1"
     }
     buildTypes {
         release {
@@ -37,7 +42,7 @@ android {
         }
     }
     dependencies {
-        compile 'com.android.support:appcompat-v7:24.1.1'
+        compile 'com.android.support:appcompat-v7:27.0.2'
     }
 }
 
