--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,10 @@ buildscript {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha14'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
         classpath 'io.fabric.tools:gradle:1.+'
 
@@ -23,7 +24,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "Baraja Sistema Coral"
-        gdxVersion = '1.9.6'
+        gdxVersion = '1.9.8'
         roboVMVersion = '2.3.1'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
@@ -36,6 +37,7 @@ allprojects {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        google()
     }
 }
 
