--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,7 +42,7 @@ android {
         }
     }
     dependencies {
-        compile 'com.android.support:appcompat-v7:27.0.2'
+        implementation 'com.android.support:appcompat-v7:27.0.2'
     }
 }
 
