--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,5 +12,5 @@ eclipse.project {
 }
 
 dependencies {
-    compile "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.2.5"
+    implementation "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.2.5"
 }
