--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -26,7 +26,7 @@ task debug(dependsOn: classes, type: JavaExec) {
 task dist(type: Jar) {
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.output.resourcesDir)
-    from {configurations.compile.collect {zipTree(it)}}
+    from {configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it)}}
     from files(project.assetsDir);
  
     manifest {
@@ -35,6 +35,12 @@ task dist(type: Jar) {
 }
 
 dist.dependsOn classes
+
+task distWindows(dependsOn: dist, type: Exec) {
+	doFirst {
+		commandLine = ['cmd', '/C', 'start', 'generate-executable.bat']
+	}
+}
 
 eclipse {
     project {
