--- a/android/local.properties
+++ b/android/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 09 12:07:20 CEST 2018
-ndk.dir=C\:\\Users\\Fer\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Fer\\AppData\\Local\\Android\\Sdk
+#Wed Jan 23 00:27:12 CET 2019
+sdk.dir=/home/fer/Android/Sdk
