--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 23 00:27:12 CET 2019
+#Mon Aug 19 02:19:26 CEST 2019
+ndk.dir=/home/fer/Android/Sdk/ndk-bundle
 sdk.dir=/home/fer/Android/Sdk
