--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -24,7 +24,7 @@ task debug(dependsOn: classes, type: JavaExec) {
 }
 
 task dist(type: Jar) {
-    from files(sourceSets.main.output.classesDir)
+    from files(sourceSets.main.output.classesDirs.filter{})
     from files(sourceSets.main.output.resourcesDir)
     from {configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it)}}
     from files(project.assetsDir);
