--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ android {
         }
     }
     dependencies {
-        implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+        implementation 'androidx.appcompat:appcompat:1.4.1'
     }
 }
 
@@ -111,7 +111,7 @@ eclipse {
     }
 
     classpath {
-        plusConfigurations += [ project.configurations.compile ]        
+        plusConfigurations += [ project.configurations.compile ]
         containers 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK', 'com.android.ide.eclipse.adt.LIBRARIES'       
     }
 
@@ -130,7 +130,7 @@ eclipse {
 idea {
     module {
         sourceDirs += file("src");
-        scopes = [ COMPILE: [plus:[project.configurations.compile]]]        
+        scopes = [ COMPILE: [plus:[project.configurations.compile]]]
 
         iml {
             withXml {
