--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,7 +1,6 @@
-apply plugin: "java"
-
 sourceCompatibility = 1.6
 sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets.main.resources.srcDirs = ["../android/assets"]
 
 project.ext.mainClassName = "ferjogames.coralsystemdeck.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../android/assets");
@@ -24,22 +23,17 @@ task debug(dependsOn: classes, type: JavaExec) {
 }
 
 task dist(type: Jar) {
-    from files(sourceSets.main.output.classesDirs.filter{})
-    from files(sourceSets.main.output.resourcesDir)
-    from {configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it)}}
-    from files(project.assetsDir);
- 
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
-}
-
-dist.dependsOn classes
-
-task distWindows(dependsOn: dist, type: Exec) {
-	doFirst {
-		commandLine = ['cmd', '/C', 'start', 'generate-executable.bat']
-	}
+    dependsOn configurations.runtimeClasspath
+    from files(sourceSets.main.output.classesDirs.filter{})
+    from files(sourceSets.main.output.resourcesDir)
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    from files(project.assetsDir)
+    with jar
 }
 
 eclipse {
@@ -47,15 +41,4 @@ eclipse {
         name = appName + "-desktop"
         linkedResource name: 'assets', type: '2', location: 'PARENT-1-PROJECT_LOC/android/assets'
     }
-}
-
-task afterEclipseImport(description: "Post processing after project generation", group: "IDE") {
-  doLast {
-    def classpath = new XmlParser().parse(file(".classpath"))
-    new Node(classpath, "classpathentry", [ kind: 'src', path: 'assets' ]);
-    def writer = new FileWriter(file(".classpath"))
-    def printer = new XmlNodePrinter(new PrintWriter(writer))
-    printer.setPreserveWhitespace(true)
-    printer.print(classpath)
-  }
 }
