Remove gradle-wrapper file and add Java 8 sourceCompatibility

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,10 @@ android {
             enableSplit = false
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     packagingOptions {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
