--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:name="ferjogames.coralsystemdeck.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
+            android:exported="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
